force-app/main/default/objects/Quota_Manage_Detail__c/Quota_Manage_Detail__c.object-meta.xml
<CustomObject>
    <description>額度管理明細(追加額度)</description>
    <label>Quota Manage Detail</label>
    <nameField>
        <displayFormat>QTD-{00000}</displayFormat>
        <label>Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quota Manage Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>