force-app/main/default/objects/Quota_Manage_Detail__c/fields/Quota_Append__c.field-meta.xml
<CustomField>
    <fullName>Quota_Append__c</fullName>
    <description>數字(追加)</description>
    <inlineHelpText>數字(追加)</inlineHelpText>
    <label>Quota(Append)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>