force-app/main/default/objects/Quota_Manage_Detail__c/fields/Quota_Manage__c.field-meta.xml
<CustomField>
    <fullName>Quota_Manage__c</fullName>
    <label>Quota Manage</label>
    <referenceTo>Quota_Manage__c</referenceTo>
    <relationshipLabel>Quota Manage Detail</relationshipLabel>
    <relationshipName>Quota_Manage_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>