force-app/main/default/objects/Quota_Manage_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>額度單位</description>
    <formula>TEXT(Quota_Manage__r.Type__c)</formula>
    <inlineHelpText>額度單位</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>